<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:title="@string/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view" />

    <item
        android:id="@+id/addDrinkFragment"
        android:title="@string/nav_add"
        android:icon="@android:drawable/ic_input_add" />

    <item
        android:id="@+id/historyFragment"
        android:title="@string/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history" />

    <item
        android:id="@+id/insightsFragment"
        android:title="@string/nav_insights"
        android:icon="@android:drawable/ic_menu_info_details" />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences" />

</menu>