<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="org.me.gcu.dramwise.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/addDrinkFragment"
        android:name="org.me.gcu.dramwise.ui.add.AddDrinkFragment"
        android:label="@string/nav_add" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="org.me.gcu.dramwise.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/insightsFragment"
        android:name="org.me.gcu.dramwise.ui.insights.InsightsFragment"
        android:label="@string/nav_insights" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.me.gcu.dramwise.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>